--- a/myboot03/src/main/resources/application.properties
+++ b/myboot03/src/main/resources/application.properties
@@ -1,23 +1,24 @@
 
 #Server
 server.port=8090
-server.session.timeout=360000
+server.servlet.session.timeout=360000
 
 
 #Spring MVC
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jsp
+
 
 #Database config
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=scott
+spring.datasource.username=jaemin
 spring.datasource.password=tiger
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 
+
 #mybatis config
-mybatis.config=classpath:mybatis-config.xml
+mybatis.config-location=classpath:mybatis-config.xml
+
 
 #매퍼 파일에서 alias를 쓰기위한 패키지 지정
 mybatis.type-aliases-package=com.myboot03.member.vo
-
-
