--- a/TravelClub/pom.xml
+++ b/TravelClub/pom.xml
@@ -63,6 +63,28 @@
 		    <artifactId>gson</artifactId>
 		</dependency>
 		
+		<!-- Spring Data JPA -->
+		<dependency>
+	      	<groupId>org.springframework.boot</groupId>
+	      	<artifactId>spring-boot-starter-data-jpa</artifactId>
+	    </dependency>
+	    
+	    
+	    <!-- h2 -->
+	     <dependency>
+		      <groupId>com.h2database</groupId>
+		      <artifactId>h2</artifactId>
+		      <scope>runtime</scope>
+	    </dependency>
+    
+
+		<!-- oracle -->
+	    <dependency>
+	      	<groupId>com.oracle.database.jdbc</groupId>
+	      	<artifactId>ojdbc8</artifactId>
+	      	<scope>runtime</scope>
+	    </dependency>
+		
 	</dependencies>
 
 	<build>
