--- a/TravelClub/pom.xml
+++ b/TravelClub/pom.xml
@@ -22,6 +22,9 @@
 	
 	<properties>
 		<java.version>17</java.version>
+		<!-- 
+		<spring-cloud.version>2022.0.1</spring-cloud.version>
+		-->
 	</properties>
 	
 	
@@ -84,8 +87,29 @@
 	      	<artifactId>ojdbc8</artifactId>
 	      	<scope>runtime</scope>
 	    </dependency>
+	    
+	    <!-- Eureka Client -->
+	    <!-- 
+	    <dependency>
+	      <groupId>org.springframework.cloud</groupId>
+	      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+	    </dependency> -->
 		
 	</dependencies>
+	
+	<!-- 
+	<dependencyManagement>
+	    <dependencies>
+	      <dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-dependencies</artifactId>
+	        <version>${spring-cloud.version}</version>
+	        <type>pom</type>
+	        <scope>import</scope>
+	      </dependency>
+	    </dependencies>
+	  </dependencyManagement> -->
+
 
 	<build>
 		<plugins>
