--- a/TravelClub/src/main/resources/application.properties
+++ b/TravelClub/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=false
 # 콘솔에 출력가능한 hiberate 최소 레벨
 logging.level.org.hibernate=info
+
+
+##Eureka 설정
+#spring.application.name= TravelClub
+#eureka.client.service-url.defaultZone = http://localhost:8761/eureka
